--- a/index.html
+++ b/index.html
@@ -3,9 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Microsoft - Cloud, Computers, Apps & Gaming</title>
 </head>
 <body>
-
+    <header>
+        <div class="nav">
+            <div class="logo">
+                <img src="https://img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE1Mu3b?ver=5c31"
+                    alt="MS logo">
+            </div>
+            <nav>
+                <a href="#">Microsoft 365</a>
+                <a href="#">Teams</a>
+                <a href="#">Windows</a>
+                <a href="#">Surface</a>
+                <a href="#">Xbox</a>
+                <a href="#">Support</a>
+            </nav>
+        </div>
+    </header>
 </body>
 </html>
