--- a/index.html
+++ b/index.html
@@ -23,5 +23,27 @@
             </nav>
         </div>
     </header>
+<main>
+    <div class="advertisement">
+        <div class="main-img">
+            <img src="./assets/ms365.webp" alt="">
+        </div>
+        <div class="text">
+            <h2>Microsoft 365</h2>
+
+            <p>Turn your ideas into reality, stay safer online and off, and focus on what matters most with Microsoft
+                365 apps</p>
+
+            <div class="links">
+                <button>
+                    For one person
+                </button>
+
+                <a href="#">For up to six people</a>
+                <p>></p>
+            </div>
+        </div>
+    </div>
+</main>
 </body>
 </html>
